[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/CardTable/DispChromosome.gd" type="Script" id=1]
[ext_resource path="res://Scenes/CardTable/ChromosomeStatus.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/CardTable/Chromosome.tscn" type="PackedScene" id=3]


[node name="DispChromosome" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -900.0
rect_min_size = Vector2( 200, 262 )
script = ExtResource( 1 )

[node name="container" type="HBoxContainer" parent="."]
margin_left = 7.5
margin_top = 40.0
margin_right = 1607.5
margin_bottom = 290.0
custom_constants/separation = 25

[node name="BtnCollapse" type="Button" parent="container"]
visible = false
margin_right = 75.0
margin_bottom = 250.0
rect_min_size = Vector2( 75, 50 )
text = "Show"

[node name="BtnChoose" type="Button" parent="container"]
visible = false
margin_left = 100.0
margin_right = 175.0
margin_bottom = 250.0
rect_min_size = Vector2( 75, 50 )
text = "  Keep  "

[node name="StatusBar" parent="container" instance=ExtResource( 2 )]
visible = false
margin_bottom = 250.0

[node name="scroll" type="ScrollContainer" parent="container"]
margin_right = 1590.0
margin_bottom = 250.0
rect_min_size = Vector2( 1590, 0 )
rect_clip_content = false
scroll_vertical_enabled = false

[node name="cmsm" parent="container/scroll" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_bottom = 225.0
[connection signal="pressed" from="container/BtnCollapse" to="." method="_on_BtnCollapse_pressed"]
[connection signal="pressed" from="container/BtnChoose" to="." method="_on_BtnChoose_pressed"]
[connection signal="cmsm_changed" from="container/scroll/cmsm" to="." method="_on_cmsm_cmsm_changed"]
[connection signal="elm_clicked" from="container/scroll/cmsm" to="." method="_propogate_click"]
[connection signal="elm_mouse_entered" from="container/scroll/cmsm" to="." method="_propagate_mouse_entered"]
[connection signal="elm_mouse_exited" from="container/scroll/cmsm" to="." method="_propagate_mouse_exited"]
